--- a/twoplus_exp1.html
+++ b/twoplus_exp1.html
@@ -52,9 +52,9 @@
 			</div>
 			<div class="row col s12 m12 l12">
 				<ol style="list-style-type: square;">
-					<li>Use notepad++ or notepad for coding.After you complete paste your code to respective boxes.</li>
+					<li>Use notepad++ or notepad for coding.</li>
 					<li>Use your own css for look n feel.</li>
-					<li>Submit your test before or on time otherwise your code will not be considered.</li>
+					<li>MAil your codes within time limit.</li>
 					<li>Time limit for the test is 2.5 hrs.</li>
 				</ol>
 				<div></div>
