--- a/twoplus_exp1.html
+++ b/twoplus_exp1.html
@@ -54,7 +54,7 @@
 				<ol style="list-style-type: square;">
 					<li>Use notepad++ or notepad for coding.</li>
 					<li>Use your own css for look n feel.</li>
-					<li>MAil your codes within time limit.</li>
+					<li>Mail your codes within time limit.</li>
 					<li>Time limit for the test is 2.5 hrs.</li>
 				</ol>
 				<div></div>
