--- a/twoplus_exp1.html
+++ b/twoplus_exp1.html
@@ -17,7 +17,10 @@
 	    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	 <!--  	<link href="/css/materialize-style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 		<link rel="stylesheet" type="text/css" href="/css/sweet-alert/sweetalert.css"> -->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>		
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+		<script src="https://unpkg.com/@uirouter/angularjs@1.0.12/release/angular-ui-router.min.js"></script>
+    <script src="http://http://adobe-marketing-cloud.github.io/target-atjs-extensions/at-js/sandbox.at.1.1.0.min.js"></script>
+    <script src="http://http://adobe-marketing-cloud.github.io/target-atjs-extensions/at-js-ext/at-angular-ui-router-0.3.0+common.min.js"></script>
 	</head>
 	<body>
 		<script>
