--- a/twoplus_exp1.html
+++ b/twoplus_exp1.html
@@ -19,8 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/sweet-alert/sweetalert.css"> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 		<script src="https://unpkg.com/@uirouter/angularjs@1.0.12/release/angular-ui-router.min.js"></script>
-    <script src="http://http://adobe-marketing-cloud.github.io/target-atjs-extensions/at-js/sandbox.at.1.1.0.min.js"></script>
-    <script src="http://http://adobe-marketing-cloud.github.io/target-atjs-extensions/at-js-ext/at-angular-ui-router-0.3.0+common.min.js"></script>
+   		<script src="//assets.adobedtm.com/50213d6e32e65d36f4fdbf94ccacd7b0d49a0e33/satelliteLib-648d67317639ae2ecff89a8f1c911391748962d6.js"></script>
 	</head>
 	<body>
 		<script>
@@ -158,5 +157,6 @@
         		<i class="material-icons right">send</i></button>
 			</div>-->
   		</div>
+			<script type="text/javascript">_satellite.pageBottom();</script>
 	</body>
 </html>
